--- a/index.html
+++ b/index.html
@@ -46,11 +46,19 @@ layout: default
 	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div style="text-align:center;margin:2.5em">
-		<p id="container"  class="button_white" style="width:28%; float:left"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
-		<p class="button_white" style="width:28%; display:inline-block"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
-		<p class="button_white" style="width:28%; float:right"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
-	</div>	
-	
+			<div class="button_white" style="width:30%; float:left; word-break:break-word">
+			<div id="container2"><i class='fas fa-robot fa-4x'></i></div>
+			<div id="container1"><a href="{{ site.url }}my_cv/">About me</a></div>	
+		</div>
+		<div class="button_white" style="width:30%; display: inline-block">
+			<div id="container2"><i class='fas fa-meteor fa-4x'></i></div>
+			<div id="container2"><a href="{{ site.url }}past_research/">Past Reserach Projects</a></div>
+		</div>
+		<div class="button_white" style="width:30%; float:right">
+			<div id="container2"><i class='fa fa-hand-spock fa-4x'></i></div>
+			<div id="container1"><a href="{{ site.url }}outreach/"><br>Outreach & Misc</a></div>
+		</div>
+	</div>		
 
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
