--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: default
 			<div id="container2"><a href="{{ site.url }}past_research/">Past Reserach Projects</a></div>
 		</div>
 		<div class="button_white" style="width:30%; float:right">
-			<div id="container2"><i class='fa fa-hand-spock fa-4x'></i></div>
+			<div id="container2"><i class='fas fa-hand-spock fa-4x'></i></div>
 			<div id="container1"><a href="{{ site.url }}outreach/"><br>Outreach & Misc</a></div>
 		</div>
 	</div>		
