--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
 	<div style="text-align:center;margin:2.5em">
 			<div class="button_white" style="width:30%; float:left; word-break:break-word">
 			<div id="container2"><i class='fas fa-robot fa-4x'></i></div>
-			<div id="container1"><a href="{{ site.url }}my_cv/">About me</a></div>	
+			<div id="container1" style="font-size:2.5vw><a href="{{ site.url }}my_cv/">About me</a></div>	
 		</div>
 		<div class="button_white" style="width:30%; display: inline-block">
 			<div id="container2"><i class='fas fa-meteor fa-4x'></i></div>
@@ -56,7 +56,7 @@ layout: default
 		</div>
 		<div class="button_white" style="width:30%; float:right">
 			<div id="container2"><i class='fas fa-hand-spock fa-4x'></i></div>
-			<div id="container1"><a href="{{ site.url }}outreach/"><br>Outreach & Misc</a></div>
+			<div id="container1"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
 		</div>
 	</div>		
 
