--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ layout: default
     
   </ul>
 
-<div class="button_white" style="float:right; height:2em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
+<div class="button_white" style="float:right; height:2em; margin-bottom:1em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
 	<div style="text-align:center;margin:2.5em">
-		<div class="button_white" style="width:32%; float:left; word-break:break-word">
+		<div class="button_white" style="width:32%; float:left">
 			<div id="container2"><i class='fas fa-atom fa-4x'></i></div>
 			<div id="container1"><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></div>	
 		</div>
@@ -46,7 +46,7 @@ layout: default
 	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div style="text-align:center;margin:2.5em">
-			<div class="button_white" style="width:32%; float:left; word-break:break-word">
+			<div class="button_white" style="width:32%; float:left">
 			<div id="container2"><i class='fas fa-robot fa-4x'></i></div>
 			<div id="container1" style="font-size:2.25vw"><a href="{{ site.url }}my_cv/">About me</a></div>	
 		</div>
