--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 	<div style="text-align:center;margin:2.5em">
 		<div class="button_white" style="width:32%; float:left">
 			<div id="container2"><i class='fas fa-atom fa-4x'></i></div>
-			<div id="container1" style="font-size: 1.4em"><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></div>	
+			<div id="container1"><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></div>	
 		</div>
 		<div class="button_white" style="width:32%; display: inline-block">
 			<div id="container2"><i class='fas fa-binoculars fa-4x'></i></div>
