--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
 		</div>
 		<div class="button_white" style="width:32%; float:right">
 			<div id="container2"><i class='fas fa-hand-spock fa-4x'></i></div>
-			<div id="container1"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
+			<div id="container1" style="font-size:1.5vw"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
 		</div>
 	</div>		
 
