--- a/index.html
+++ b/index.html
@@ -31,32 +31,32 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
 	<div style="text-align:center;margin:2.5em">
-		<div class="button_white" style="width:32%; float:left">
+		<div class="button_white" style="float:left">
 			<div id="container2"><i class='fas fa-atom fa-4x'></i></div>
-			<div id="container1" style="font-size:0.9em"><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></div>	
+			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></div>	
 		</div>
-		<div class="button_white" style="width:32%; display: inline-block">
+		<div class="button_white" style="display: inline-block">
 			<div id="container2"><i class='fas fa-binoculars fa-4x'></i></div>
 			<div id="container2"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
-		<div class="button_white" style="width:32%; float:right">
+		<div class="button_white" style="float:right">
 			<div id="container2"><i class='fa fa-star fa-4x'></i></div>
 			<div id="container1"><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></div>
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div style="text-align:center;margin:2.5em">
-		<div class="button_white" style="width:32%; float:left">
+		<div class="button_white" style="float:left">
 			<div id="container2"><i class='fas fa-robot fa-4x'></i></div>
-			<div id="container1" style="font-size:2.3vw"><a href="{{ site.url }}my_cv/">About me</a></div>	
+			<div id="container1-font-larger"><a href="{{ site.url }}my_cv/">About me</a></div>	
 		</div>
-		<div class="button_white" style="width:32%; display: inline-block">
+		<div class="button_white" style="display: inline-block">
 			<div id="container2"><i class='fas fa-meteor fa-4x'></i></div>
 			<div id="container2"><a href="{{ site.url }}past_research/">Past Reserach Projects</a></div>
 		</div>
-		<div class="button_white" style="width:32%; float:right">
+		<div class="button_white" style="float:right">
 			<div id="container2"><i class='fas fa-hand-spock fa-4x'></i></div>
-			<div id="container1" style="font-size:1.5vw"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
+			<div id="container1-font-larger"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
 		</div>
 	</div>		
 
