--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
 	<div style="text-align:center;margin:2.5em">
 		<div class="button_white" style="float:left">
 			<div id="container2"><i class='fas fa-robot fa-4x'></i></div>
-			<div id="container1-font-huge"><a href="{{ site.url }}my_cv/">About me</a></div>	
+			<div id="container1-font-huge"><a href="{{ site.url }}my_cv/">About<br>me</a></div>	
 		</div>
 		<div class="button_white" style="display: inline-block">
 			<div id="container2"><i class='fas fa-meteor fa-4x'></i></div>
