--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: default
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
-	<div style="text-align:center;margin:2.5em">
+	<div class"large-margin" style="text-align:center">
 		<div class="button_white" style="float:left">
 			<div id="container2"><i class='fas fa-robot fa-4x'></i></div>
 			<div id="container1-font-huge"><a href="{{ site.url }}my_cv/">About<br>me</a></div>	
