--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 <div class="button_white" style="float:right; width: 8em; height:2em; margin-bottom:1em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="text-align:center;margin:2.5em">
+	<div class"large-margin" style="text-align:center">
 		<div class="button_white" style="float:left">
 			<div id="container2"><i class='fas fa-atom fa-4x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></div>	
