--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ layout: default
     
   </ul>
 
-<div class="button_white" style="float:right; width: 8em; height:2em; margin-bottom:1em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
+<div class="button_white" style="float:right; font-size:1em; width:6em; height:2em; margin-bottom:1em; display:flex; justify-content:center; align-items:center; margin:0.5em;">
+	<a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
 	<div class="large-margin" style="text-align:center">
