--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
 		</div>
 		<div class="button_white" style="float:right">
 			<div id="container2"><i class='fa fa-star fa-4x'></i></div>
-			<div id="container1"><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></div>
+			<div id="container1"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
