--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 	<div class="large-margin" style="text-align:center">
 		<div class="button_white" style="float:left">
 			<div id="container2"><i class='fas fa-atom fa-4x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}early-gal-formation/">Modelling early-stage galaxy formation</a></div>	
+			<div id="container1-font-smaller"><a href="{{ site.url }}early-gal-formation/">Low Surface Brightness Galaxies</a></div>	
 		</div>
 		<div class="button_white" style="display: inline-block">
 			<div id="container2"><i class='fas fa-binoculars fa-4x'></i></div>
