--- a/index.html
+++ b/index.html
@@ -33,33 +33,34 @@ layout: default
 <h3 class="page-heading">Projects</h3>
 	<div class="large-margin" style="text-align:center">
 		<div class="button_white" style="float:left">
-			<div id="container2"><i class='fas fa-atom fa-4x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}early-gal-formation/">Low Surface Brightness Galaxies</a></div>	
+			<div id="container2"><i class='fas fa-atom fa-2x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
 		<div class="button_white" style="display: inline-block">
-			<div id="container2"><i class='fas fa-binoculars fa-4x'></i></div>
-			<div id="container1"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
+			<div id="container2"><i class='fas fa-binoculars fa-2x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
 		<div class="button_white" style="float:right">
-			<div id="container2"><i class='fa fa-star fa-4x'></i></div>
-			<div id="container1"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
+			<div id="container2"><i class='fa fa-star fa-2x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div class="large-margin" style="text-align:center">
 		<div class="button_white" style="float:left">
-			<div id="container2"><i class='fas fa-robot fa-4x'></i></div>
-			<div id="container1-font-huge"><a href="{{ site.url }}my_cv/">About<br>me</a></div>	
-		</div>
-		<div class="button_white" style="display: inline-block">
-			<div id="container2"><i class='fas fa-meteor fa-4x'></i></div>
-			<div id="container1"><a href="{{ site.url }}past_research/">Past Reserach Projects</a></div>
+			<div id="container2"><i class='fas fa-robot fa-2x'></i></div>
+			<div id="container1"><a href="{{ site.url }}my_cv/">About<br>me</a></div>	
 		</div>
 		<div class="button_white" style="float:right">
-			<div id="container2"><i class='fas fa-hand-spock fa-4x'></i></div>
+			<div id="container2"><i class='fas fa-hand-spock fa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
 		</div>
-	</div>		
+		<div class="large-margin" style="text-align:center">
+		<div class="button_white" style="float:left">
+			<div id="container2"><i class='fas fa-robot fa-2x'></i></div>
+			<div id="container1"><a href="{{ site.url }}talks/">Talks<br>\&<br>Seminars</a></div>	
+		</div>
+	</div>
 
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
