--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 	
 <h3 class="title">Welcome to my research blog</h3>
 	
-<div align="center" style="margin-bottom: 15px; font-size: 1em">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>	
+<div align="center" style="margin-bottom: 15px; font-size: 1.5em">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>	
 	
 
 <blockquote>
@@ -17,7 +17,7 @@ layout: default
 	<div style="margin_bottom: 2em;"><b>Learn more about my work and see some recent posts:</b></div>
 
   <ul class="customListPosts">
-    {% for post in site.posts limit:10%}
+    {% for post in site.posts limit:5%}
 
     <li>
       <span>{{ post.date | date: "%b %-d, %Y" }}</span> &nbsp; <tt><a href="{{ post.url | prepend: site.baseurl }}"> {{post.title }}</a></tt>
@@ -49,7 +49,7 @@ layout: default
 	<div class="large-margin" style="text-align:center">
 		<div class="button_white" style="float:left">
 			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
-			<div id="container1"><a href="{{ site.url }}my_cv/">About<br>me</a></div>	
+			<div id="container1"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
 		</div>
 		<div class="button_white" style="float:right">
 			<div id="container3"><i class='fas fa-hand-spock fa-2x'></i></div>
@@ -57,7 +57,7 @@ layout: default
 		</div>
 		<div class="button_white" style="float:left">
 			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
-			<div id="container1"><a href="{{ site.url }}talks/">Talks<br>\&<br>Seminars</a></div>	
+			<div id="container1"><a href="{{ site.url }}talks/">Talks<br>&<br>Seminars</a></div>	
 		</div>
 	</div>
 
