--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ layout: default
 
 <div class="home">
 	
-<h3 class="title">Welcome to my research blog</h3>
+<h3 class="title">Welcome to my webpage</h3>
 	
 <div align="center" style="margin-bottom: 15px; font-size: 1.5em">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>	
 	
 
 <blockquote>
-	<tt><b>About: </b>This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.</tt>										     
+	<tt><b>About: </b>This space is dedicated to my reserach on galaxy formation and evolution modelling.</tt>										     
 </blockquote>
 	
 
@@ -58,6 +58,10 @@ layout: default
 		<div class="button_white" style="float:left">
 			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}talks/">Talks<br>&<br>Seminars</a></div>	
+		</div>
+		<div class="button_white" style="float:left">
+			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
+			<div id="container1"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
 		</div>
 	</div>
 
