--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@ layout: default
 	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div class="large-margin" style="text-align:center">
-		<div class="button_white" style="float:left">
+		<div class="button_white" style="left: 10%">
 			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
 		</div>
-		<div class="button_white" style="float:right">
+		<div class="button_white" style="left: 25%">
 			<div id="container3"><i class='fas fa-hand-spock fa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
 		</div>
-		<div class="button_white" style="float:left">
+		<div class="button_white" style="left:50%">
 			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}talks/">Talks<br>&<br>Seminars</a></div>	
 		</div>
-		<div class="button_white" style="float:left">
+		<div class="button_white" style="left:75%">
 			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
 		</div>
