--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: default
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
-	<div class="large-margin" style="text-align:center">
+	<div class="small-margin" style="text-align:center">
 		<div class="button_white" style="left: 10%">
 			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
