--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
 			<div id="container3"><i class='fas fa-atom fa-2x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
-		<div class="button_white" style="display: inline-block">
+		<div class="button_white" style="left: 50%">
 			<div id="container2"><i class='fas fa-binoculars fa-2x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
