--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
 	<div class="large-margin" style="text-align:center">
-		<div class="button_white" style="left: 25%">
+		<div class="button_white" style="position: relative; top: 10%; left: 25%">
 			<div id="container3"><i class='fas fa-atom fa-2x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
