--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
 	<div class="large-margin" style="text-align:center">
-		<div class="button_white" style="position: absolute; top: 10%; left: 10%">
+		<div class="button_white" style="position: relative; left: 10%">
 			<div id="container3"><i class='fas fa-atom fa-2x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
-		<div class="button_white" style="position: absolute; top: 10%; left: 50%">
+		<div class="button_white" style="position: relative; left: 50%">
 			<div id="container2"><i class='fas fa-binoculars fa-2x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
-		<div class="button_white" style="position: absolute; top: 10%; left: 90%">
+		<div class="button_white" style="position: absolute; left: 75%">
 			<div id="container3"><i class='fa fa-star fa-2x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
