--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
 			<div id="container2"><i class='fas fa-binoculars fa-2x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
-		<div class="button_white" style="position: absolute; left: 75%">
+		<div class="button_white" style="position: relative; left: 75%">
 			<div id="container3"><i class='fa fa-star fa-2x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
