--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ layout: default
 			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
-		<div class="button_white" style="position: relative; left: 10%">
+		<div class="button_white" style="position: relative">
 			<div id="container2"><i class='fas fa-binoculars fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
-		<div class="button_white" style="position: relative; left: 10%">
+		<div class="button_white" style="position: relative">
 			<div id="container3"><i class='fa fa-star fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
