--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ layout: default
 	<a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div class="large-margin" style="text-align:center">
+	//<div class="small-margin" style="text-align:center">
+	<div>
 		<div class="button_white" style="position: relative; top: 10%; left: 20%">
 			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
