--- a/index.html
+++ b/index.html
@@ -45,6 +45,40 @@ layout: default
 			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
 	</div>
+	
+<div align="center" style="margin-bottom: 15px; font-size: 1.5em">
+	
+		<div class="button_white" style="position: relative; top: 10%; left: 20%">
+			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
+		</div>
+		<div class="button_white" style="position: relative">
+			<div id="container2"><i class='fas fa-binoculars fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
+		</div>
+		<div class="button_white" style="position: relative">
+			<div id="container3"><i class='fa fa-star fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
+		</div>
+	
+</div>
+	
+<h3 class="page-heading">Projects</h3>
+	<div style="float:center">
+		<div class="button_white" style="position: relative; top: 10%; left: 20%">
+			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
+		</div>
+		<div class="button_white" style="position: relative">
+			<div id="container2"><i class='fas fa-binoculars fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
+		</div>
+		<div class="button_white" style="position: relative">
+			<div id="container3"><i class='fa fa-star fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
+		</div>
+	</div>	
+	
 <h3 class="page-heading">Further Information</h3>
 	<div class="small-margin" style="text-align:center">
 		<div class="button_white" style="left: 10%">
