--- a/index.html
+++ b/index.html
@@ -31,22 +31,8 @@ layout: default
 	<a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="float:left">
-		<div class="button_white">
-			<div id="container3"><i class='fas fa-galaxy fa-1x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
-		</div>
-		<div class="button_white">
-			<div id="container2"><i class='fas fa-binoculars fa-1x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
-		</div>
-		<div class="button_white">
-			<div id="container3"><i class='fa fa-star fa-1x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
-		</div>
-	</div>
 	
-<div align="center" style="margin-bottom: 15px; font-size: 1.5em">
+<div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 	
 		<div class="button_white" style="position: relative; top: 10%; left: 20%">
 			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
@@ -57,7 +43,7 @@ layout: default
 			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
 		<div class="button_white" style="position: relative">
-			<div id="container3"><i class='fa-duetone fa-stars fa-1x'></i></div>
+			<div id="container3"><i class='fa fa-star fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
 	
@@ -80,7 +66,7 @@ layout: default
 	</div>	
 	
 <h3 class="page-heading">Further Information</h3>
-	<div class="small-margin" style="text-align:center">
+	<div class="large-margin" aglin="center" style="text-align:center">
 		<div class="button_white" style="left: 10%">
 			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
@@ -94,9 +80,13 @@ layout: default
 			<div id="container1"><a href="{{ site.url }}talks/">Talks<br>&<br>Seminars</a></div>	
 		</div>
 		<div class="button_white" style="left: 75%">
-			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
+			<div id="container3"><i class='fas fa-earth-americas fa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
 		</div>
+		<div class="button_white" style="left: 75%">
+			<div id="container3"><i class='fas fa-compass fa-2x'></i></div>
+			<div id="container1"><a href="{{ site.url }}teaching/">Teaching</a></div>	
+		</div>		
 	</div>
 
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
