--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 	
 <div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 	
-		<div class="button_white" style="position: relative; top: 10%; left: 20%">
+		<div class="button_white" style="position: relative>
 			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
