--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: default
 			<div id="container1"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
 		</div>
 		<div class="button_white" style="left: 50%">
-			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
+			<div id="container3"><i class='fa-solid fa-user-astronautfa-2x'></i></div>
 			<div id="container1"><a href="{{ site.url }}talks/">Talks<br>&<br>Seminars</a></div>	
 		</div>
 		<div class="button_white" style="left: 75%">
