--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 	
 <div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 	
-		<div class="button_white" style="position: relative>
+		<div class="button_white" style="position: relative">
 			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
@@ -67,25 +67,25 @@ layout: default
 	
 <h3 class="page-heading">Further Information</h3>
 	<div class="large-margin" aglin="center" style="text-align:center">
-		<div class="button_white" style="left: 10%">
-			<div id="container3"><i class='fas fa-robot fa-2x'></i></div>
-			<div id="container1"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
+		<div class="button_white">
+			<div id="container3"><i class='fas fa-robot fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
 		</div>
-		<div class="button_white" style="left: 25%">
-			<div id="container3"><i class='fas fa-hand-spock fa-2x'></i></div>
-			<div id="container1"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
+		<div class="button_white">
+			<div id="container3"><i class='fas fa-hand-spock fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
 		</div>
-		<div class="button_white" style="left: 50%">
-			<div id="container3"><i class='fa-solid fa-user-astronautfa-2x'></i></div>
-			<div id="container1"><a href="{{ site.url }}talks/">Talks<br>&<br>Seminars</a></div>	
-		</div>
-		<div class="button_white" style="left: 75%">
-			<div id="container3"><i class='fas fa-earth-americas fa-2x'></i></div>
-			<div id="container1"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
+		<div class="button_white">
+			<div id="container3"><i class='fa-solid fa-user-astronautfa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}talks/">Talks<br>&<br>Seminars</a></div>	
 		</div>
 		<div class="button_white" style="left: 75%">
-			<div id="container3"><i class='fas fa-compass fa-2x'></i></div>
-			<div id="container1"><a href="{{ site.url }}teaching/">Teaching</a></div>	
+			<div id="container3"><i class='fas fa-earth-americas fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
+		</div>
+		<div class="button_white" style="left: 75%">
+			<div id="container3"><i class='fas fa-compass fa-1x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}teaching/">Teaching</a></div>	
 		</div>		
 	</div>
 
