--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout: default
 			<div id="container1-font-smaller"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
 		</div>
 		<div class="button_white" style="left: 75%">
-			<div id="container3"><i class='fas fa-compass fa-1x'></i></div>
+			<div id="container3"><i class='fas fa-graduation-cap fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}teaching/">Teaching</a></div>	
 		</div>		
 	</div>
