--- a/index.html
+++ b/index.html
@@ -34,37 +34,21 @@ layout: default
 	
 <div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 	
-		<div class="button_white" style="position: relative">
+		<div class="button_white" style="position: relative; margin-left: 10px">
 			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
-		<div class="button_white" style="position: relative">
+		<div class="button_white" style="position: relative; margin-left: 15px">
 			<div id="container2"><i class='fas fa-binoculars fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
-		<div class="button_white" style="position: relative">
+		<div class="button_white" style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fa fa-star fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
 	
 </div>
-	
-<h3 class="page-heading">Projects</h3>
-	<div style="float:center">
-		<div class="button_white" style="position: relative; top: 10%; left: 20%">
-			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
-		</div>
-		<div class="button_white" style="position: relative">
-			<div id="container2"><i class='fas fa-binoculars fa-1x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
-		</div>
-		<div class="button_white" style="position: relative">
-			<div id="container3"><i class='fa fa-star fa-1x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
-		</div>
-	</div>	
-	
+		
 <h3 class="page-heading">Further Information</h3>
 	<div class="large-margin" aglin="center" style="text-align:center">
 		<div class="button_white">
@@ -80,7 +64,7 @@ layout: default
 			<div id="container1-font-smaller"><a href="{{ site.url }}talks/">Talks<br>&<br>Seminars</a></div>	
 		</div>
 		<div class="button_white" style="left: 75%">
-			<div id="container3"><i class='fas fa-earth-americas fa-1x'></i></div>
+			<div id="container3"><i class='fa fa-earth-americas fa-1x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
 		</div>
 		<div class="button_white" style="left: 75%">
