--- a/index.html
+++ b/index.html
@@ -34,42 +34,43 @@ layout: default
 	
 <div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 	
-		<div class="button_white" style="position: relative; margin-left: 10px">
-			<div id="container3"><i class='fas fa-atom fa-1x'></i></div>
+		<div class="button_white" style="position: relative; margin-left: 20px">
+			<div id="container3"><i class='fas fa-atom fa-1.5x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
-		<div class="button_white" style="position: relative; margin-left: 15px">
-			<div id="container2"><i class='fas fa-binoculars fa-1x'></i></div>
+		<div class="button_white" style="position: relative; margin-left: 20px">
+			<div id="container2"><i class='fas fa-binoculars fa-1.5x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
 		<div class="button_white" style="position: relative; margin-left: 20px">
-			<div id="container3"><i class='fa fa-star fa-1x'></i></div>
+			<div id="container3"><i class='fa fa-star fa-1.5x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
 	
 </div>
 		
 <h3 class="page-heading">Further Information</h3>
-	<div class="large-margin" aglin="center" style="text-align:center">
-		<div class="button_white">
+	<div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
+
+		<div class="button_white" style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fas fa-robot fa-1x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
+			<div id="container1-font-medium"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
 		</div>
-		<div class="button_white">
-			<div id="container3"><i class='fas fa-hand-spock fa-1x'></i></div>
+		<div class="button_white"  style="position: relative; margin-left: 20px">
+			<div id="container3"><i class='fas fa-hand-spock fa-1.5x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
 		</div>
-		<div class="button_white">
-			<div id="container3"><i class='fa-solid fa-user-astronautfa-1x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}talks/">Talks<br>&<br>Seminars</a></div>	
+		<div class="button_white"  style="position: relative; margin-left: 20px">
+			<div id="container3"><i class='fa-solid fa-user-astronaut fa-1.5x'></i></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}talks/">Talks<br>&<br>Presentations</a></div>	
 		</div>
-		<div class="button_white" style="left: 75%">
-			<div id="container3"><i class='fa fa-earth-americas fa-1x'></i></div>
+		<div class="button_white"  style="position: relative; margin-left: 20px">
+			<div id="container3"><i class='fa-earth-americas fa-1.5x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
 		</div>
-		<div class="button_white" style="left: 75%">
+		<div class="button_white"  style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fas fa-graduation-cap fa-1x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}teaching/">Teaching</a></div>	
+			<div id="container1-font-medium"><a href="{{ site.url }}teaching/">Teaching</a></div>	
 		</div>		
 	</div>
 
