--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
 <div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 	
 		<div class="button_white" style="position: relative; margin-left: 20px">
-			<div id="container3"><i class='fas fa-atom fa-1.5x'></i></div>
+			<div id="container3"><i class='fas fa-lightbulb fa-1.5x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
 		<div class="button_white" style="position: relative; margin-left: 20px">
@@ -57,7 +57,7 @@ layout: default
 	<div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 
 		<div class="button_white" style="position: relative; margin-left: 20px">
-			<div id="container3"><i class='fas fa-robot fa-1x'></i></div>
+			<div id="container3"><i class='fas fa-user-astronaut fa-1.5x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
@@ -65,15 +65,15 @@ layout: default
 			<div id="container1-font-smaller"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
-			<div id="container3"><i class='fa-solid fa-user-astronaut fa-1.5x'></i></div>
+			<div id="container3"><i class='fas fa-bullhorn fa-1.5x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}talks/">Talks<br>&<br>Presentations</a></div>	
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
-			<div id="container3"><i class='fa-earth-americas fa-1.5x'></i></div>
+			<div id="container3"><i class='fas fa-earth-americas fa-1.5x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
-			<div id="container3"><i class='fas fa-graduation-cap fa-1x'></i></div>
+			<div id="container3"><i class='fas fa-graduation-cap fa-1.5x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}teaching/">Teaching</a></div>	
 		</div>		
 	</div>
