--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ layout: default
 	
 
 <blockquote>
-	<tt><b>About: </b>This space is dedicated to my reserach on galaxy formation and evolution modelling.</tt>
-	
+	<tt><b>About: </b>This space is dedicated to my reserach on galaxy formation and evolution modelling.</tt>	
 	<div class="large-margin" style="text-align:center">
 		<img src="{{ site.baseurl }}/pictures/inka_milky_way.jpg" width="75%" alt="Inca View on the Center of our Galaxy"/>
+		<figcaption>The Inca's view on the center of our galaxy (Museum Qurikancha, Cusco, Peru)</figcaption>
 	</div>	
 </blockquote>
 	
