--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
 			<div id="container1-font-smaller"><a href="{{ site.url }}talks/">Talks<br>&<br>Presentations</a></div>	
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
-			<div id="container3"><i class='fas fa-earth-americas fa-2x'></i></div>
+			<div id="container3"><i class='fa fa-earth-americas fa-2x'></i></div>
 			<div id="container1-font-smaller"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
