--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ layout: default
 
 <blockquote>
 	<tt><b>About: </b>This space is dedicated to my reserach on galaxy formation and evolution modelling.</tt>	
-	<div class="large-margin" style="text-align:center"><br>
-		<img src="{{ site.baseurl }}/pictures/inka_milky_way.jpg" width="75%" alt="Inca View on the Center of our Galaxy"/>
-		<i>The Inca's view on the center of our galaxy (Museum Qurikancha, Cusco, Peru)</i>
+	<div class="large-margin" style="text-align:center">
+		<img src="{{ site.baseurl }}/pictures/inka_milky_way.jpg" width="75%" alt="Inca View on the Center of our Galaxy"/><br>		
+		<i><small>The Inca's view on the center of our galaxy (Museum Qurikancha, Cusco, Peru)</small></i>
 	</div>	
 </blockquote>
 	
