--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@ layout: default
 	
 		<div class="button_white" style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fas fa-lightbulb fa-2x'></i></div>
-			<div id="container1-font-medium"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
+			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
 		<div class="button_white" style="position: relative; margin-left: 20px">
 			<div id="container2"><i class='fas fa-binoculars fa-2x'></i></div>
-			<div id="container1-font-medium"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
+			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
 		<div class="button_white" style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fa fa-star fa-2x'></i></div>
@@ -62,15 +62,15 @@ layout: default
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fas fa-hand-spock fa-2x'></i></div>
-			<div id="container1-font-medium"><a href="{{ site.url }}outreach/">Outreach<br>&<br>Misc</a></div>
+			<div id="container1-font-medium"><a href="{{ site.url }}outreach/">Outreach<br>& Misc</a></div>
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fas fa-bullhorn fa-2x'></i></div>
-			<div id="container1-font-medium"><a href="{{ site.url }}talks/">Talks<br>&<br>Presentations</a></div>	
+			<div id="container1-font-medium"><a href="{{ site.url }}talks/">Talks &<br>Presentations</a></div>	
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fa fa-globe fa-2x'></i></div>
-			<div id="container1-font-medium"><a href="{{ site.url }}tavel/">Astro-Travel<br>&<br>Friends</a></div>	
+			<div id="container1-font-medium"><a href="{{ site.url }}tavel/">Astro-Travel<br>& Friends</a></div>	
 		</div>
 		<div class="button_white"  style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fas fa-graduation-cap fa-2x'></i></div>
