--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ layout: default
 
 <div class="button_white" style="float:right; font-size:0.7em; width:8.5em; height:2.5em; margin-bottom:1em; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 	<a href="{{ site.url }}all_posts/">See all posts</a></div>
+	
+<div class="button_white_small" style="float:right; font-size:0.7em">
+	<a href="{{ site.url }}all_posts/">See all posts</a></div>	
 				   
 <h3 class="page-heading">Projects</h3>
 	
