--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
 	<a href="{{ site.url }}all_posts/">See all posts</a></div>
 	
 <div class="button_white_small" style="float:right; font-size:0.7em">
-	<a href="{{ site.url }}all_posts/">See all posts</a></div>	
+	<a href="{{ site.url }}all_posts/">See all posts2</a></div>	
 				   
 <h3 class="page-heading">Projects</h3>
 	
