--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ layout: default
 			<div id="container3"><i class='fas fa-lightbulb fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
-		<div class="button_white_project" style="position: relative">
+		<div class="button_white_project" style="position: relative; font-size=1.2em">
 			<div id="container2"><i class='fas fa-binoculars fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
-		<div class="button_white_project" style="position: relative">
+		<div class="button_white_project" style="position: relative; font-size=1.2em">
 			<div id="container3"><i class='fa fa-star fa-2x'></i></div>
-			<div id="container1-font-medium"><a href="{{ site.url }}multidark_gals/">The MultiDark- Galaxies</a></div>
+			<div id="container1-font-medium"><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></div>
 		</div>
 	
 </div>
@@ -69,11 +69,11 @@ layout: default
 			<div id="container3"><i class='fas fa-bullhorn fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}talks/">Talks &<br>Presentations</a></div>	
 		</div>
-		<div class="button_white"  style="position: relative; margin-left: 20px">
+		<div class="button_white"  style="position: relative">
 			<div id="container3"><i class='fa fa-globe fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}tavel/">Astro-Travel<br>& Friends</a></div>	
 		</div>
-		<div class="button_white"  style="position: relative; margin-left: 20px">
+		<div class="button_white"  style="position: relative">
 			<div id="container3"><i class='fas fa-graduation-cap fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}teaching/">Teaching</a></div>	
 		</div>		
